@@ -1,7 +1,6 @@
 package org.bukkit.craftbukkit.inventory;
 
 import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
 import java.util.List;
@@ -92,7 +91,7 @@ public class CraftMetaBundle extends CraftMetaItem implements BundleMeta {
 
     @Override
     public List<ItemStack> getItems() {
-        return (items == null) ? ImmutableList.of() : ImmutableList.copyOf(items);
+        return (items == null) ? List.of() : List.copyOf(items);
     }
 
     @Override
